--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+PyMySQL==1.0.2
+PyPika==0.48.9
 typing-extensions==4.2.0
 Werkzeug==2.1.2
 zipp==3.8.0
