--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,28 @@
-click==8.1.3
+async-timeout==4.0.2
+bcrypt==3.2.2
+cffi==1.15.0
+click==8.0.4
 colorama==0.4.4
-Flask==2.1.2
-importlib-metadata==4.11.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
+cryptography==37.0.2
+dataclasses==0.8
+Deprecated==1.2.13
+Flask==2.0.3
+importlib-metadata==4.8.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+numpy==1.19.5
+packaging==21.3
+pandas==1.1.5
+pycparser==2.21
 PyMySQL==1.0.2
+pyparsing==3.0.9
 PyPika==0.48.9
-typing-extensions==4.2.0
-Werkzeug==2.1.2
-zipp==3.8.0
+python-dateutil==2.8.2
+pytz==2022.1
+redis==4.3.3
+six==1.16.0
+typing_extensions==4.1.1
+Werkzeug==2.0.3
+wrapt==1.14.1
+zipp==3.6.0
